--- a/www/index.html
+++ b/www/index.html
@@ -10,5 +10,9 @@
 <body>
 	<h1>Hello World</h1>
 	<p>some text<p>
+	<script type="text/javascript" src="phonegap.js"></script>			
+	<script type="text/javascript">
+		app.initialize();
+	</script>
 </body>
 </html>
