--- a/www/index.html
+++ b/www/index.html
@@ -8,8 +8,8 @@
         <title>first PhoneGap App</title>
 		<script type="text/javascript" src="phonegap.js"></script>	
     </head>
-<body>
-	<h1>Hello World</h1>
-	<p>some text ...<p>			
-</body>
+	<body>
+		<h1>Hello World</h1>
+		<p>some text<p>			
+	</body>
 </html>
